syntax = "proto3";
package http;
option java_multiple_files = true;
option java_package = "violet.gateway.common.proto_gen.http";

import "proto/action.proto";
import "proto/im.proto";

enum StatusCode{
  StatusCode_Not_Use = 0;
  Success = 1000;
  Server_Error = 1001;
  Param_Error = 1002;
  OverFrequency_Error = 1003;
  OverLimit_Error=1004;
  Duplicate_Error=1005;
  RetryTime_Error=1006;
  Not_Found_Error = 1007;
}

message LoginRequest{
  string username=1;
  string password=2;
}
message LoginResponse{
  string token=1;
}

message RegisterRequest{
  string username=1;
  string password=2;
  string confirm_password=3;
}
message RegisterResponse{
}

message GetUserProfileRequest{
  int64 user_id=1;
  bool need_follow_info=2;
}
message GetUserProfileResponse{
  action.UserInfo user_info=1;
  int64 friend_count=2;
  int64 following_count=3;
  int64 follower_count=4;
}

message SearchUserRequest{
  string keyword=1;
}
message SearchUserResponse{
  repeated action.UserInfo user_infos=1;
}

message FollowRequest{
  int64 to_user_id=1;
  int32 follow_type=2;
}
message FollowResponse{
}

message GetFollowListRequest{
  int64 user_id=1;
  int32 follow_type=2;
}
message GetFollowListResponse{
  repeated action.UserInfo user_infos=1;
}

message GetMessageByInitRequest{

}
message GetMessageByInitResponse{

}

message GetMessageByConversationRequest{

}
message GetMessageByConversationResponse{

}

message SendMessageRequest{

}
message SendMessageResponse{

}

message MarkReadRequest{

}
message MarkReadResponse{

}